Fix the footer action buttons, keep them on screen when dataset goes off screen

--- a/src/app/main-interface/main-interface.component.css
+++ b/src/app/main-interface/main-interface.component.css
@@ -1,3 +1,12 @@
 .item-count{
 	font-size: 12px;
 }
+.mainFooter::before{
+	content:none;
+}
+.mainFooter::after{
+	content:none;
+}
+.mainFooter{
+	margin-left: 0px;
+}
